instagram and strava updates from 2017-12-24

--- a/index.html
+++ b/index.html
@@ -173,6 +173,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001137.jpg" title="More pics from today’s ride. It was nice but chilly. Good times with @elliotlovestarbicycles and @mrchanzalez #lovestarraceclub #fatbike #custombikebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>More pics from today’s ride. It was nice but chilly. Good times with @elliotlovestarbicycles and @mrchanzalez #lovestarraceclub #fatbike #custombikebags</small>
+                           </div>
+                           <img src="../lsphotos/image001137.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001134.jpg" title="May not look like it...but it’s cold today. #lakemichigan" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>May not look like it...but it’s cold today. #lakemichigan</small>
+                           </div>
+                           <img src="../lsphotos/image001134.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001135.jpg" title="Tucsobia Training Trio #coffeetime" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tucsobia Training Trio #coffeetime</small>
+                           </div>
+                           <img src="../lsphotos/image001135.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001136.jpg" title="Another beautiful #tuscobiaultra  training day! #justmissingsnow #lovestarraceclub #borealisbikes #hedwheels #45nrth #revelatedesigns" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Another beautiful #tuscobiaultra  training day! #justmissingsnow #lovestarraceclub #borealisbikes #hedwheels #45nrth #revelatedesigns</small>
+                           </div>
+                           <img src="../lsphotos/image001136.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001133.jpg" title="Quick Handlebar Roll project this morning for my personal #tuscobia80 setup. Just about dialed. Leaving one week from today! 🚲❄️ #fatbike #bikepacking" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -382,58 +434,6 @@
                               <small>Early morning #tuscobiaultra training miles with @elliotlovestarbicycles and @mrchanzalez. Complete with the first snow of the season! #lovestarraceclub #tuscobiatraining #fatbike #winterbike</small>
                            </div>
                            <img src="../lsphotos/image001119.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001117.jpg" title="Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001117.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001118.jpg" title="Snow Day! #Tuscobia80" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Snow Day! #Tuscobia80</small>
-                           </div>
-                           <img src="../lsphotos/image001118.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001115.jpg" title="A little late, but here’s some pics from #montrosecx. What a great closing event to an amazing season. #lovestarraceclub #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>A little late, but here’s some pics from #montrosecx. What a great closing event to an amazing season. #lovestarraceclub #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image001115.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001114.jpg" title="Cold & Clear training ride this morning. Every ride seems bring out 10 little things that I️ need to do differently. Today’s key issues included a frozen hydration system, layering on my legs and my lighter rattling in my camp stove... #fatbike #Tuscobia80" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold & Clear training ride this morning. Every ride seems bring out 10 little things that I️ need to do differently. Today’s key issues included a frozen hydration system, layering on my legs and my lighter rattling in my camp stove... #fatbike #Tuscobia80</small>
-                           </div>
-                           <img src="../lsphotos/image001114.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
