--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001117.jpg" title="Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001117.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001118.jpg" title="Snow Day! #Tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snow Day! #Tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001115.jpg" title="A little late, but here’s some pics from #montrosecx. What a great closing event to an amazing season. #lovestarraceclub #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>A little late, but here’s some pics from #montrosecx. What a great closing event to an amazing season. #lovestarraceclub #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image001115.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001114.jpg" title="Cold & Clear training ride this morning. Every ride seems bring out 10 little things that I️ need to do differently. Today’s key issues included a frozen hydration system, layering on my legs and my lighter rattling in my camp stove... #fatbike #Tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold & Clear training ride this morning. Every ride seems bring out 10 little things that I️ need to do differently. Today’s key issues included a frozen hydration system, layering on my legs and my lighter rattling in my camp stove... #fatbike #Tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001114.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001113.jpg" title="It may have been a little chilly this morning on my commute. Good training for #tuscobiaultra #lovestarraceclub #winterbike #fatbike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -215,58 +267,6 @@
                               <small>Turkey Day single track and pump tracks! #cranksgiving</small>
                            </div>
                            <img src="../lsphotos/image001098.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001097.jpg" title="It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx</small>
-                           </div>
-                           <img src="../lsphotos/image001097.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001095.jpg" title="Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure</small>
-                           </div>
-                           <img src="../lsphotos/image001095.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001094.jpg" title="New Bike Day!" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New Bike Day!</small>
-                           </div>
-                           <img src="../lsphotos/image001094.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001096.jpg" title="Finished up a pair of pint-sized pogies to match a tiny frame bag. This 20” setup is ready for some some big-little adventures 🚲 #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a pair of pint-sized pogies to match a tiny frame bag. This 20” setup is ready for some some big-little adventures 🚲 #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image001096.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
