--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000937.jpg" title="We got an unexpected surprise in our hotel room! #lovestarraceclub #almanzo100" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>We got an unexpected surprise in our hotel room! #lovestarraceclub #almanzo100</small>
+                           </div>
+                           <img src="../lsphotos/image000937.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000934.jpg" title="One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000934.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000931.jpg" title="Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000931.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000932.jpg" title="Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked</small>
+                           </div>
+                           <img src="../lsphotos/image000932.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000935.jpg" title="😎😎🚲 #fatbike #cycling #bicycle #adventuredad #lovestarraceclub #lakemichigan" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -209,58 +261,6 @@
                               <small>Custom #lovestarbicyclebags Saddlepack shipping out tomorrow. #handmade #cycling #bicycle #bicyclebag #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000918.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000917.jpg" title="Shadows on the trail...a long and lonely training ride had me staring at my shadow a lot this morning. #lovestarraceclub #desplainesrivertrail" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Shadows on the trail...a long and lonely training ride had me staring at my shadow a lot this morning. #lovestarraceclub #desplainesrivertrail</small>
-                           </div>
-                           <img src="../lsphotos/image000917.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000916.jpg" title="Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000916.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000915.jpg" title="Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000915.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000914.jpg" title="#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000914.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
