--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000011.jpg" title="Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000011.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000003.jpg" title="Today's off to a good start. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Today's off to a good start. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000003.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000002.jpg" title="Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>boorittany</h4>
+                              <small>Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers</small>
+                           </div>
+                           <img src="../lsphotos/image000002.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000012.jpg" title="Sunrise sand riding #cycling #bicycle #fatbike #bikechi #lakemichigan #bikepacking #LoveStarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise sand riding #cycling #bicycle #fatbike #bikechi #lakemichigan #bikepacking #LoveStarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000012.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000013.jpg" title="Always smiling when I get to ride with @agonz21 #cycling #bicycle #bikechi #coffeeride #LoveStarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Congrats to Rob on his podium finish! #lovestarraceclub #numberone</small>
                            </div>
                            <img src="../lsphotos/image000022.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000023.jpg" title="First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000024.jpg" title="2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000024.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000025.jpg" title="Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000025.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000026.jpg" title="It's got to be these new kits...way to go, Rob! #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>It's got to be these new kits...way to go, Rob! #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000026.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
