--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000997.jpg" title="Early to bed early to shred. #cycling #coffeeride #bicycle #ridecannondale #bikechi #roadie #bikesandbeards #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Early to bed early to shred. #cycling #coffeeride #bicycle #ridecannondale #bikechi #roadie #bikesandbeards #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000997.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000996.jpg" title="I love trying new things 😱🚲 #ridecannondale #cycling #bicycle #srametap #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I love trying new things 😱🚲 #ridecannondale #cycling #bicycle #srametap #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000996.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000995.jpg" title="Most people think of Saturday as a day to sleep in...not these studs. It's all early, all the time. #lovestarraceclub #squad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Most people think of Saturday as a day to sleep in...not these studs. It's all early, all the time. #lovestarraceclub #squad</small>
+                           </div>
+                           <img src="../lsphotos/image000995.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000994.jpg" title="Wheelie practice in the parking lot, buried radioactive waste, and broken carbon wheels. Highs and lows but at least I was with good friends! #lovestarraceclub #borealisecho #hedwheels #mountainbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Wheelie practice in the parking lot, buried radioactive waste, and broken carbon wheels. Highs and lows but at least I was with good friends! #lovestarraceclub #borealisecho #hedwheels #mountainbike</small>
+                           </div>
+                           <img src="../lsphotos/image000994.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000993.jpg" title="Sunset miles with #babySNUB" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Tour De Divvy. Stop 1. #halfacrebrewing #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000978.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000977.jpg" title="Custom #lovestarbicyclebags double carry case for a @microtechknives OTF auto and a @RuckUp OTF auto tactical beard comb. #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #lovestarbicyclebags double carry case for a @microtechknives OTF auto and a @RuckUp OTF auto tactical beard comb. #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000977.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000975.jpg" title="Gorgeous day for a ride. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Gorgeous day for a ride. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000975.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000976.jpg" title="Comin in hot. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Comin in hot. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000976.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000974.jpg" title="&quot;I went to the woods because I wished to live deliberately...&quot; #lovestarraceclub #ridefreeordie" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>"I went to the woods because I wished to live deliberately..." #lovestarraceclub #ridefreeordie</small>
-                           </div>
-                           <img src="../lsphotos/image000974.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
