--- a/instagram21.html
+++ b/instagram21.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000096.jpg" title="Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000096.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000038.jpg" title="Mini epic. #LovestarRaceClub #bicycle #cx #chicrosscup #babySNUB #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mini epic. #LovestarRaceClub #bicycle #cx #chicrosscup #babySNUB #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image000038.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000039.jpg" title="Well, I didn't get the result I wanted today, but I'll live to fight another day. On the bright side, my bike is now clean. #lovestarraceclub #drwCX #baaw #superx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Well, I didn't get the result I wanted today, but I'll live to fight another day. On the bright side, my bike is now clean. #lovestarraceclub #drwCX #baaw #superx</small>
+                           </div>
+                           <img src="../lsphotos/image000039.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000040.jpg" title="#LovestarRaceClub warmups at Chicago cross cup #3 #drwcx #chicagocrosscup #cycling #cyclocross #cx #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#LovestarRaceClub warmups at Chicago cross cup #3 #drwcx #chicagocrosscup #cycling #cyclocross #cx #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000040.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000041.jpg" title="Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>From Sunday, a stylized @agonz21 crushing a turn at #chicrosscup. #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000542.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000098.jpg" title="Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000098.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000055.jpg" title="Can't/Won't (stop) #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Can't/Won't (stop) #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000055.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000056.jpg" title="Before and After of our captain getting heckled by an 11 yr old and coming out all smiles during #labaghcx today. CX is fun #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Before and After of our captain getting heckled by an 11 yr old and coming out all smiles during #labaghcx today. CX is fun #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000056.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000099.jpg" title="Thank you @elliotlovestarbicycles for rebuilding @dustinbennettproducer bike! What an awesome job!!!! You'd never know that bike is 20+ years old. The custom Lovestar bag is the perfect finishing touch!! #custombikes #custombikebags #lovestarbicycles #cycling #bikes #lovestarbicyclebags #lovestar #elliotlovestarbicycle #brothers #bestsonsever #bestbuddies" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Thank you @elliotlovestarbicycles for rebuilding @dustinbennettproducer bike! What an awesome job!!!! You'd never know that bike is 20+ years old. The custom Lovestar bag is the perfect finishing touch!! #custombikes #custombikebags #lovestarbicycles #cycling #bikes #lovestarbicyclebags #lovestar #elliotlovestarbicycle #brothers #bestsonsever #bestbuddies</small>
-                           </div>
-                           <img src="../lsphotos/image000099.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
