--- a/instagram43.html
+++ b/instagram43.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000731.jpg" title="#LovestarFactoryTeam and our littlest mechanic." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LovestarFactoryTeam and our littlest mechanic.</small>
+                           </div>
+                           <img src="../lsphotos/image000731.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000732.jpg" title="#SpeedLimit #LovestarFactoryTeam #LSB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#SpeedLimit #LovestarFactoryTeam #LSB</small>
+                           </div>
+                           <img src="../lsphotos/image000732.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000733.jpg" title="Comin' in hot. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Comin' in hot. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000733.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000734.jpg" title="Handsome lineup this morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Handsome lineup this morning. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000734.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000296.jpg" title="Foggy commute for #fatbikefriday sure doesn't feel like it's almost July. #bikechi #framebag #lovestarbicyclebags #handmade #fatbike #bicycle #cycling #bicyclebag #bikepacking #bikecommute #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,62 +263,6 @@
                               <small>Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000739.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000307.jpg" title="Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000307.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000740.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000740.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000741.jpg" title="#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000741.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000308.jpg" title="The whole #lovestarbicyclebags family out for a lakefront ride tonight! #adventuredad #futurecyclist #babysnub #striderbikes #bicycle #cycling #thulechariot #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The whole #lovestarbicyclebags family out for a lakefront ride tonight! #adventuredad #futurecyclist #babysnub #striderbikes #bicycle #cycling #thulechariot #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000308.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
