--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000370.jpg" title="Team colors. #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Team colors. #lovestarbicyclebags #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000370.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000371.jpg" title="Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000371.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000372.jpg" title="Here at Lovestar Bicycle Bags, I mostly make cycling gear. But every once in a while I make miniature disco queen outfits for my daughter to wear at the family's annual Christmas murder mystery dinner party. #keepingItWeird #murdermysteryparty #sewRad #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Here at Lovestar Bicycle Bags, I mostly make cycling gear. But every once in a while I make miniature disco queen outfits for my daughter to wear at the family's annual Christmas murder mystery dinner party. #keepingItWeird #murdermysteryparty #sewRad #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000372.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000373.jpg" title="The pre-dawn trainer class at wheel & sprocket #Evanston is a bit lonely if anyone else wants to sign up :) #trainer #cycling #lovestarbicyclebags #bikechi #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The pre-dawn trainer class at wheel & sprocket #Evanston is a bit lonely if anyone else wants to sign up :) #trainer #cycling #lovestarbicyclebags #bikechi #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000373.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000374.jpg" title="First computrainer class at Wheel & Sprocket in #Evanston early this morning. Great class worked me over a bit. #trainer #cycling #lovestarbicyclebags #bikechi #getfit #wheelandsprocket" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Lovestar Factory Team representing at a very sandy #MontroseCX State championship race. #cyclocross #cx #bikechi #chicrosscup #cycling #sandpits #lovestarbicyclebags #lovestarbicycles #bikerace</small>
                            </div>
                            <img src="../lsphotos/image000389.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000390.jpg" title="Lovestar Factory Team @ MontroseCx Illinois State Championships! #cyclocrosschicago #cyclocross #cycling #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Lovestar Factory Team @ MontroseCx Illinois State Championships! #cyclocrosschicago #cyclocross #cycling #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000390.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000391.jpg" title="Final race of the season at Montrose Harbor. Illinois State Championships. Lovestar Factory Team finished strong! Go Lovestar!!! #montrosecx #chicagoracing #chicagocyclocross #chicagocycling #lovestar #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Final race of the season at Montrose Harbor. Illinois State Championships. Lovestar Factory Team finished strong! Go Lovestar!!! #montrosecx #chicagoracing #chicagocyclocross #chicagocycling #lovestar #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago</small>
-                           </div>
-                           <img src="../lsphotos/image000391.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000392.jpg" title="Spent today's nap time cutting material for some Lovestar shop aprons. #handmade #lovestarbicyclebags #lovestarbicycles #cycling #biketools #bikechi #bikemechanic" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Spent today's nap time cutting material for some Lovestar shop aprons. #handmade #lovestarbicyclebags #lovestarbicycles #cycling #biketools #bikechi #bikemechanic</small>
-                           </div>
-                           <img src="../lsphotos/image000392.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000393.jpg" title="Huge thank you to @chandlersnyder for getting my #Moots dialed in and ready for #MontroseCX this weekend! Bike is prettier than the day I bought it. #cx #cyclocross #bikechi #trp #hyRd #whiteindustries #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Huge thank you to @chandlersnyder for getting my #Moots dialed in and ready for #MontroseCX this weekend! Bike is prettier than the day I bought it. #cx #cyclocross #bikechi #trp #hyRd #whiteindustries #lovestarbicyclebags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000393.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
