--- a/instagram8.html
+++ b/instagram8.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000977.jpg" title="Custom #lovestarbicyclebags double carry case for a @microtechknives OTF auto and a @RuckUp OTF auto tactical beard comb. #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags double carry case for a @microtechknives OTF auto and a @RuckUp OTF auto tactical beard comb. #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000977.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000975.jpg" title="Gorgeous day for a ride. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Gorgeous day for a ride. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000975.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000976.jpg" title="Comin in hot. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Comin in hot. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000976.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000974.jpg" title="&quot;I went to the woods because I wished to live deliberately...&quot; #lovestarraceclub #ridefreeordie" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>"I went to the woods because I wished to live deliberately..." #lovestarraceclub #ridefreeordie</small>
+                           </div>
+                           <img src="../lsphotos/image000974.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000973.jpg" title="All three kids presented me with Father's Day cards this morning. Each of them had chosen a special activity that they wanted to do one-on-one. My 3rd Outing today was with our 2.5 year old foster daughter. She chose to ride her bike to the park. She recently made the jump from balance bike to pedal bike and was VERY excited that she got to ride her bike The whole wAy there. ❤️🚲 #fathersday #dadlife #adventuredad #bicycle #bikechi #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,64 +263,6 @@ Cleary riders!
                               <small>Happy National Donut Day!! 🍩🚲 swing by the Pony Shop today for a donut (while they last 😉) #internationaldonutday #🍩 #donutride #cycling #bicycle #moots #cyclocross #evanston #nationaldonutday #bikeevanston #lovestarbicyclebags #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000958.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000957.jpg" title="Fantastic night ride tonight. All great rides end with beer. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Fantastic night ride tonight. All great rides end with beer. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000957.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000956.jpg" title="Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybiketools #hirobel #lovestarbicyclebags #clearybikes" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybiketools #hirobel #lovestarbicyclebags #clearybikes</small>
-                           </div>
-                           <img src="../lsphotos/image000956.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000953.jpg" title="You don't have to be a kid to have a blast on our bikes!!
-😎
-🚴🏽
-👍🏽" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clearybikes</h4>
-                              <small>You don't have to be a kid to have a blast on our bikes!!
-😎
-🚴🏽
-👍🏽</small>
-                           </div>
-                           <img src="../lsphotos/image000953.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000954.jpg" title="#BabyARC showing off his first Cat6 tattoo. #cat6tattoo #cycling #cyclist #bicycle #futurecyclist #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#BabyARC showing off his first Cat6 tattoo. #cat6tattoo #cycling #cyclist #bicycle #futurecyclist #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000954.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
