--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,64 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000957.jpg" title="Fantastic night ride tonight. All great rides end with beer. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Fantastic night ride tonight. All great rides end with beer. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000957.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000956.jpg" title="Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybiketools #hirobel #lovestarbicyclebags #clearybikes" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybiketools #hirobel #lovestarbicyclebags #clearybikes</small>
+                           </div>
+                           <img src="../lsphotos/image000956.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000953.jpg" title="You don't have to be a kid to have a blast on our bikes!!
+😎
+🚴🏽
+👍🏽" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>You don't have to be a kid to have a blast on our bikes!!
+😎
+🚴🏽
+👍🏽</small>
+                           </div>
+                           <img src="../lsphotos/image000953.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000954.jpg" title="#BabyARC showing off his first Cat6 tattoo. #cat6tattoo #cycling #cyclist #bicycle #futurecyclist #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#BabyARC showing off his first Cat6 tattoo. #cat6tattoo #cycling #cyclist #bicycle #futurecyclist #lilshredder #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000954.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000952.jpg" title="@oliviabeaty and I crushing the game with the #lovestarraceclub this morning." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -215,58 +273,6 @@ First ride of the season where sunrise is officially before the ride start time.
                               <small>Pinning on a number tomorrow for my 5th #Almazo100 ... weather is starting to look like the makings of an epic day. Our hotel clerk told us that he had 20 room cancellations in the last day. #belgianthefup #gravel #gravelgrinder #cycling #bicycle #adventurebike #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000938.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000937.jpg" title="We got an unexpected surprise in our hotel room! #lovestarraceclub #almanzo100" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>We got an unexpected surprise in our hotel room! #lovestarraceclub #almanzo100</small>
-                           </div>
-                           <img src="../lsphotos/image000937.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000934.jpg" title="One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000934.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000931.jpg" title="Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000931.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000932.jpg" title="Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked</small>
-                           </div>
-                           <img src="../lsphotos/image000932.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
